# LearnOpenGL-1

./: .gitignore  .gitmodules  CMakeLists.txt  GenProject-macos.sh  GenProject-win.bat  LICENSE  README.md
includes/learnopengl/: shader_s.h
src/1.getting_started/1.0.test_compile/: main.cpp
src/1.getting_started/1.1.hello_window/: main.cpp
src/1.getting_started/2.1.hello_triangle/: main.cpp
src/1.getting_started/2.2.hello_triangle_indexed/: main.cpp
src/1.getting_started/2.3.hello_triangle_2/: main.cpp
src/1.getting_started/2.4.get_opengl_info/: main.cpp
src/1.getting_started/2.5.hello_triangle_exercise/: main.cpp
src/1.getting_started/3.1.shader_uniform/: mian.cpp
src/1.getting_started/3.2.shaders_interpolation/: main.cpp
src/1.getting_started/3.3.shader_class/: main.cpp
src/1.getting_started/3.4_shaders_exercise1/: 3.4.shader.vs  main.cpp
src/1.getting_started/3.5_shaders_exercise2/: 3.5.shader.vs  main.cpp
src/1.getting_started/4.1.textures/: 4.1.texture.fs  mian.cpp
src/1.getting_started/4.2.textures_combine/: 4.2.shader.fs  4.2.shader.vs  main.cpp
src/1.getting_started/4.3.textures_exercise1/: 4.3.shader.fs  main.cpp
src/1.getting_started/4.4.textures_exercise2/: main.cpp
src/1.getting_started/4.5.textures_exercise3/: main.cpp
src/1.getting_started/4.6.textures_exercise4/: 4.6.shader.fs  4.6.shader.vs  main.cpp
src/1.getting_started/4.7.imgui_test/: 4.7.shader.fs  4.7.shader.vs  main.cpp
src/1.getting_started/5.1.transformations/: 5.1.shader.fs  5.1.shader.vs  main.cpp
src/1.getting_started/5.2.transformations_exercise1/: main.cpp
src/1.getting_started/5.3.transformations_exercise2/: 5.3.shader.vs  main.cpp
src/1.getting_started/6.1.coordinate_system/: 6.1.shader.vs  main.cpp
